adicionando logica de cargos